style / theme, better targetting for top tabs spacing, for https://github.com/opnsense/core/issues/2185

--- a/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
+++ b/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
@@ -366,8 +366,7 @@ body{
   border-bottom: none;
 }
 
-.dropdown-menu > li > a,
-.dropdown-header {
+ul.nav > li.dropdown > ul.dropdown-menu > li > a {
   padding: 3px 10px;
 }
 
